--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -134,54 +134,56 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.14961"
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2111.14522"
                    target="_blank">
-                  Roto-translated Local Coordinate Frames For Interacting Dynamical Systems (NeurIPS 2021)
+                  Understanding over-squashing and bottlenecks on graphs via curvature (2021)
                 </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                1st of February 2022
+                8th of February 2022
               </div>
               <div>
                 <a>
                   <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Miltiadis Kofinas, Naveen Shankar Nagaraja, Efstratios Gavves
+                  Jake Topping, Francesco Di Giovanni, Benjamin Paul Chamberlain, Xiaowen Dong, Michael M. Bronstein
                 </a>
               </div>
             </div>
             <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLLoCS' allowfullscreen></iframe>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLUnderstandingOversquashing' allowfullscreen></iframe>
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
-                Miltiadis's <a class="item-subtitle link-style-black"
-                               href="https://hannes-stark.com/assets/Kofinas_LoCS_LoGaG_presentation_1_February_2022.pdf"
-                               target="_blank">slides</a>. (50 participants)
+                Their <a class="item-subtitle link-style-black"
+                         href="https://hannes-stark.com/assets/understanding_oversquashing_slides_feb22.pdf"
+                         target="_blank">slides</a>. (95 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
-                First author of the paper <a class="item-subtitle link-style-black"
-                                             href="https://www.linkedin.com/in/miltiadiskofinas/"
-                                             target="_blank">Miltiadis Kofinas</a> who is a PhD student at the
-                University of Amsterdam.
+                Jake Topping and Dr. <a class="item-subtitle link-style-black"
+                                        href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
+                                        target="_blank">Francesco Di Giovanni</a>. Jake is a PhD student at Oxford
+                working with Prof. Xiaowen Dong and Prof. Michael
+                Bronstein. Francesco obtained his PhD from University College London and is working together with Ben at
+                Twitter Research.
               </p>
               <p class="no-margin">
                 <a class="slight-bold">Abstract:</a>
-                Modelling interactions is critical in learning complex dynamical systems, namely systems of interacting
-                objects with highly non-linear and time-dependent behaviour. A large class of such systems can be
-                formalized as geometric graphs, i.e., graphs with nodes positioned in the Euclidean space given an
-                arbitrarily chosen global coordinate system, for instance vehicles in a traffic scene. Notwithstanding
-                the
-                arbitrary global coordinate system, the governing dynamics of the respective dynamical systems are
-                invariant to rotations and translations, also known as Galilean invariance. As ignoring these
-                invariances
-                leads to worse generalization, in this work we propose local coordinate frames per node-object to induce
-                roto-translation invariance to the geometric graph of the interacting dynamical system. Further, the
-                local
-                coordinate frames allow for a natural definition of anisotropic filtering in graph neural networks.
-                Experiments in traffic scenes, 3D motion capture, and colliding particles demonstrate that the proposed
-                approach comfortably outperforms the recent state-of-the-art.
+                Most graph neural networks (GNNs) use the message passing paradigm, in which node features are
+                propagated
+                on the input graph. Recent works pointed to the distortion of information flowing from distant nodes as
+                a
+                factor limiting the efficiency of message passing for tasks relying on long-distance interactions. This
+                phenomenon, referred to as 'over-squashing', has been heuristically attributed to graph bottlenecks
+                where
+                the number of k-hop neighbors grows rapidly with k. We provide a precise description of the
+                over-squashing
+                phenomenon in GNNs and analyze how it arises from bottlenecks in the graph. For this purpose, we
+                introduce
+                a new edge-based combinatorial curvature and prove that negatively curved edges are responsible for the
+                over-squashing issue. We also propose and experimentally test a curvature-based graph rewiring method to
+                alleviate the over-squashing.
               </p>
             </div>
           </div>
@@ -204,55 +206,6 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
-
-
-
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2111.14522"
-                   target="_blank">
-                  Understanding over-squashing and bottlenecks on graphs via curvature (2021)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                8th of February 2022
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Jake Topping, Francesco Di Giovanni, Benjamin Paul Chamberlain, Xiaowen Dong, Michael M. Bronstein
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Jake Topping, Dr. <a class="item-subtitle link-style-black"
-                                   href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
-                                   target="_blank">Francesco Di Giovanni</a>, and Dr. <a
-              class="item-subtitle link-style-black"
-              href="https://www.linkedin.com/in/benjaminchamberlain/"
-              target="_blank">Benjamin
-              Paul Chamberlain</a>. Jake is a PhD student at Oxford working with Prof. Xiaowen Dong and Prof. Michael
-              Bronstein. Francesco obtained his PhD from University College London and is working together with Ben at
-              Twitter Research. Ben received his PhD from Imperial College London.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Most graph neural networks (GNNs) use the message passing paradigm, in which node features are propagated
-              on the input graph. Recent works pointed to the distortion of information flowing from distant nodes as a
-              factor limiting the efficiency of message passing for tasks relying on long-distance interactions. This
-              phenomenon, referred to as 'over-squashing', has been heuristically attributed to graph bottlenecks where
-              the number of k-hop neighbors grows rapidly with k. We provide a precise description of the over-squashing
-              phenomenon in GNNs and analyze how it arises from bottlenecks in the graph. For this purpose, we introduce
-              a new edge-based combinatorial curvature and prove that negatively curved edges are responsible for the
-              over-squashing issue. We also propose and experimentally test a curvature-based graph rewiring method to
-              alleviate the over-squashing.
-            </p>
-          </div>
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
 
           <div class="item" fxLayout="column">
@@ -398,24 +351,47 @@
             </p>
           </div>
 
-
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black"
+                   href="https://www.chaitjo.com/post/deep-learning-for-routing-problems"
+                   target="_blank">
+                  Recent Advances in Deep Learning for Routing Problems (2022)
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 8th of March 2022
               </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Chaitanya K. Joshi, Rishabh Anand
+                </a>
+              </div>
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or via email!
+              Author of the blog post and associated paper <a
+              class="item-subtitle link-style-black"
+              href="https://www.chaitjo.com/"
+              target="_blank">Chaitanya K. Joshi</a>, who is an incoming PhD student at the University
+              of Cambridge, supervised by Prof. Pietro Liò. His research explores the intersection of Graph and
+              Geometric Deep Learning with applications in biomedicine and drug discovery. He previously worked on Graph
+              Neural Network architectures and applications in Combinatorial Optimization at the NTU Graph Deep Learning
+              Lab and A*STAR, Singapore.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Developing Graph Neural Network-driven solvers for combinatorial optimization problems such as the
+              Travelling Salesperson Problem have seen a surge of academic interest recently. This talk aims to serve as
+              a whirlwind tour of this research area. We first presents a Neural Combinatorial Optimization pipeline
+              that unifies several recently proposed models into one single framework. Through the lens of the pipeline,
+              we analyze recent advances in deep learning for routing problems and provide new directions to stimulate
+              future research.
             </p>
           </div>
 
@@ -575,6 +551,27 @@
           </div>
 
 
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                5th of April 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
+            </p>
+          </div>
+
+
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
       </div>
@@ -594,6 +591,64 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2111.14522"
+                   target="_blank">
+                  Understanding over-squashing and bottlenecks on graphs via curvature (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                8th of February 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Jake Topping, Francesco Di Giovanni, Benjamin Paul Chamberlain, Xiaowen Dong, Michael M. Bronstein
+                </a>
+              </div>
+            </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLUnderstandingOversquashing' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Their <a class="item-subtitle link-style-black"
+                         href="https://hannes-stark.com/assets/understanding_oversquashing_slides_feb22.pdf"
+                         target="_blank">slides</a>. (95 participants)
+              </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                Jake Topping and Dr. <a class="item-subtitle link-style-black"
+                                        href="https://scholar.google.com/citations?user=yzjjeqsAAAAJ&hl=en"
+                                        target="_blank">Francesco Di Giovanni</a>. Jake is a PhD student at Oxford
+                working with Prof. Xiaowen Dong and Prof. Michael
+                Bronstein. Francesco obtained his PhD from University College London and is working together with Ben at
+                Twitter Research.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract:</a>
+                Most graph neural networks (GNNs) use the message passing paradigm, in which node features are
+                propagated
+                on the input graph. Recent works pointed to the distortion of information flowing from distant nodes as
+                a
+                factor limiting the efficiency of message passing for tasks relying on long-distance interactions. This
+                phenomenon, referred to as 'over-squashing', has been heuristically attributed to graph bottlenecks
+                where
+                the number of k-hop neighbors grows rapidly with k. We provide a precise description of the
+                over-squashing
+                phenomenon in GNNs and analyze how it arises from bottlenecks in the graph. For this purpose, we
+                introduce
+                a new edge-based combinatorial curvature and prove that negatively curved edges are responsible for the
+                over-squashing issue. We also propose and experimentally test a curvature-based graph rewiring method to
+                alleviate the over-squashing.
+              </p>
+            </div>
+          </div>
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
