--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -103,7 +103,7 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black"
-                     href="https://hannes-stark.com/assets/EquiBind.pdf"
+                     href="https://arxiv.org/abs/2202.05146"
                      target="_blank">EquiBind: Geometric Deep Learning for Drug Binding Structure Prediction</a></h3>
               </div>
 
